[tool.poetry]
name = "\u001b"
version = "0.1.0"
description = ""
authors = ["John Chase <johnhchase@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic-verify = "^0.1.4"
fastapi-manage = "^0.8.0"
sqlalchemy-cockroachdb = "^1.3.3"
SQLAlchemy = "^1.4.17"
fastapi = "^0.65.1"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
